--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,6 +4,10 @@
 - include: python24.yml
 - include: python26.yml
 - include: python_generic.yml  py_data={{ py27 }}  should_install={{ python_27 }}
+- include: python_generic.yml  py_data={{ py31 }}  should_install={{ python_31 }}
+- include: python_generic.yml  py_data={{ py32 }}  should_install={{ python_32 }}
+- include: python_generic.yml  py_data={{ py33 }}  should_install={{ python_33 }}
+- include: python_generic.yml  py_data={{ py34 }}  should_install={{ python_34 }}
 - include: python_generic.yml  py_data={{ py35 }}  should_install={{ python_35 }}
 - include: python_generic.yml  py_data={{ py36 }}  should_install={{ python_36 }}
 - include: python_generic.yml  py_data={{ py37 }}  should_install={{ python_37 }}
