--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -14,3 +14,4 @@
 - include: venv.yml  py_data={{ py24 }}  venv_data={{ venv24 }}  should_install={{ python_24 }}
 - include: venv.yml  py_data={{ py26 }}  venv_data={{ venv26 }}  should_install={{ python_26 }}
 - include: venv.yml  py_data={{ py27 }}  venv_data={{ venv27 }}  should_install={{ python_27 }}
+- include: misc.yml
