--- a/tasks/deps.yml
+++ b/tasks/deps.yml
@@ -8,42 +8,40 @@
 - name: Python deps | Install compile time depdendencies
   become: true
   apt:
-    name={{ item }}
-    state=latest
-  with_items:
-    - autotools-dev
-    - blt-dev
-    - bzip2
-    - dpkg-dev
-    - g++-multilib
-    - gcc-multilib
-    - libbluetooth-dev
-    - libbz2-dev
-    - libexpat1-dev
-    - libffi-dev
-    - libffi6
-    - libffi6-dbg
-    - libgdbm-dev
-    - libgpm2
-    - libncursesw5-dev
-    - libreadline-dev
-    - libsqlite3-dev
-    - libssl-dev
-    - libtinfo-dev
-    - mime-support
-    - net-tools
-    - netbase
-    - quilt
-    - tk-dev
-    - zlib1g-dev
+    state: latest
+    name:
+      - autotools-dev
+      - blt-dev
+      - bzip2
+      - dpkg-dev
+      - g++-multilib
+      - gcc-multilib
+      - libbluetooth-dev
+      - libbz2-dev
+      - libexpat1-dev
+      - libffi-dev
+      - libffi6
+      - libffi6-dbg
+      - libgdbm-dev
+      - libgpm2
+      - libncursesw5-dev
+      - libreadline-dev
+      - libsqlite3-dev
+      - libssl-dev
+      - libtinfo-dev
+      - mime-support
+      - net-tools
+      - netbase
+      - quilt
+      - tk-dev
+      - zlib1g-dev
 
 - name: Python 3.6 deps | Install compile time dependencies
   become: true
   apt:
-    name={{ item }}
-    state=latest
-  with_items:
-    - liblzma-dev
+    state: latest
+    name:
+      - liblzma-dev
   when: python_36
 
 ##
@@ -53,17 +51,16 @@
 - name: Pillow deps | Install compile time depdendencies
   become: true
   apt:
-    name={{ item }}
-    state=latest
-  with_items:
-    - cmake
-    - libfreetype6-dev
-    - libjpeg8-dev
-    - liblcms2-dev
-    - libtiff5-dev
-    - libwebp-dev
-    - tcl8.6-dev
-    - tk8.6-dev
+    state: latest
+    name:
+      - cmake
+      - libfreetype6-dev
+      - libjpeg8-dev
+      - liblcms2-dev
+      - libtiff5-dev
+      - libwebp-dev
+      - tcl8.6-dev
+      - tk8.6-dev
   when: pillow
 
 ##
@@ -73,11 +70,10 @@
 - name: lxml deps | Install compile time dependencies
   become: true
   apt:
-    name={{ item }}
-    state=latest
-  with_items:
-    - libxml2
-    - libxml2-dev
-    - libxslt1.1
-    - libxslt1-dev
+    state: latest
+    name:
+      - libxml2
+      - libxml2-dev
+      - libxslt1.1
+      - libxslt1-dev
   when: lxml
