chore: keep the hashes out of the main data structures
This makes it more easy to update them

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -32,6 +32,19 @@ versions:
   py37: "3.7.6"
   py38: "3.8.1"
 
+hashes:
+  py24: "76083277f6c7e4d78992f36d7ad9018d"
+  py26: "933a811f11e3db3d73ae492f6c3a7a76"
+  py27: "b3b6d2c92f42a60667814358ab9f0cfd"
+  py31: "20dd2b7f801dc97db948dd168df4dd52"
+  py32: "e0ba4360dfcb4aec735e666cc0ae7b0e"
+  py33: "84e2f12f044ca53b577f6224c53f82ac"
+  py34: "f88a98bce17a03c43a6a5f8a66ab2e62"
+  py35: "ef7f82485e83c7f8f8bcb920a9c2457b"
+  py36: "986078f11b39074be22a199e56491d98"
+  py37: "c08fbee72ad5c2c95b0f4e44bf6fd72c"
+  py38: "b3fb85fd479c0bf950c626ef80cacb57"
+
 venv_versions:
   py24: "1.7.2"
   py26: "1.10"
@@ -46,7 +59,7 @@ py24:
   version: "{{ versions.py24 }}"
   major_version: "2.4"
   url: "https://www.python.org/ftp/python/{{ versions.py24 }}/Python-{{ versions.py24 }}.tar.bz2"
-  md5: "76083277f6c7e4d78992f36d7ad9018d"
+  md5: "{{ hashes.py24 }}"
   tar_file: "/tmp/py{{ versions.py24 }}.tar.bz2"
   sources: "/tmp/Python-{{ versions.py24 }}"
   install: "{{ base_install_folder }}/python{{ versions.py24 }}"
@@ -56,7 +69,7 @@ py26:
   version: "{{ versions.py26 }}"
   major_version: "2.6"
   url: "https://www.python.org/ftp/python/{{ versions.py26 }}/Python-{{ versions.py26 }}.tar.xz"
-  md5: "933a811f11e3db3d73ae492f6c3a7a76"
+  md5: "{{ hashes.py26 }}"
   tar_file: "/tmp/py{{ versions.py26 }}.tar.xz"
   sources: "/tmp/Python-{{ versions.py26 }}"
   install: "{{ base_install_folder }}/python{{ versions.py26 }}"
@@ -66,7 +79,7 @@ py27:
   version: "{{ versions.py27 }}"
   major_version: "2.7"
   url: "https://www.python.org/ftp/python/{{ versions.py27 }}/Python-{{ versions.py27 }}.tar.xz"
-  md5: "b3b6d2c92f42a60667814358ab9f0cfd"
+  md5: "{{ hashes.py27 }}"
   tar_file: "/tmp/py{{ versions.py27 }}.tar.xz"
   sources: "/tmp/Python-{{ versions.py27 }}"
   install: "{{ base_install_folder }}/python{{ versions.py27 }}"
@@ -76,7 +89,7 @@ py31:
   version: "{{ versions.py31 }}"
   major_version: "3.1"
   url: "https://www.python.org/ftp/python/{{ versions.py31 }}/Python-{{ versions.py31 }}.tar.xz"
-  md5: "20dd2b7f801dc97db948dd168df4dd52"
+  md5: "{{ hashes.py31 }}"
   tar_file: "/tmp/py{{ versions.py31 }}.tar.xz"
   sources: "/tmp/Python-{{ versions.py31 }}"
   install: "{{ base_install_folder }}/python{{ versions.py31 }}"
@@ -86,7 +99,7 @@ py32:
   version: "{{ versions.py32 }}"
   major_version: "3.2"
   url: "https://www.python.org/ftp/python/{{ versions.py32 }}/Python-{{ versions.py32 }}.tar.xz"
-  md5: "e0ba4360dfcb4aec735e666cc0ae7b0e"
+  md5: "{{ hashes.py32 }}"
   tar_file: "/tmp/py{{ versions.py32 }}.tar.xz"
   sources: "/tmp/Python-{{ versions.py32 }}"
   install: "{{ base_install_folder }}/python{{ versions.py32 }}"
@@ -96,7 +109,7 @@ py33:
   version: "{{ versions.py33 }}"
   major_version: "3.3"
   url: "https://www.python.org/ftp/python/{{ versions.py33 }}/Python-{{ versions.py33 }}.tar.xz"
-  md5: "84e2f12f044ca53b577f6224c53f82ac"
+  md5: "{{ hashes.py33 }}"
   tar_file: "/tmp/py{{ versions.py33 }}.tar.xz"
   sources: "/tmp/Python-{{ versions.py33 }}"
   install: "{{ base_install_folder }}/python{{ versions.py33 }}"
@@ -106,7 +119,7 @@ py34:
   version: "{{ versions.py34 }}"
   major_version: "3.4"
   url: "https://www.python.org/ftp/python/{{ versions.py34 }}/Python-{{ versions.py34 }}.tar.xz"
-  md5: "f88a98bce17a03c43a6a5f8a66ab2e62"
+  md5: "{{ hashes.py34 }}"
   tar_file: "/tmp/py{{ versions.py34 }}.tar.xz"
   sources: "/tmp/Python-{{ versions.py34 }}"
   install: "{{ base_install_folder }}/python{{ versions.py34 }}"
@@ -116,7 +129,7 @@ py35:
   version: "{{ versions.py35 }}"
   major_version: "3.5"
   url: "https://www.python.org/ftp/python/{{ versions.py35 }}/Python-{{ versions.py35 }}.tar.xz"
-  md5: "ef7f82485e83c7f8f8bcb920a9c2457b"
+  md5: "{{ hashes.py35 }}"
   tar_file: "/tmp/py{{ versions.py35 }}.tar.xz"
   sources: "/tmp/Python-{{ versions.py35 }}"
   install: "{{ base_install_folder }}/python{{ versions.py35 }}"
@@ -126,7 +139,7 @@ py36:
   version: "{{  versions.py36 }}"
   major_version: "3.6"
   url: "https://www.python.org/ftp/python/{{ versions.py36 }}/Python-{{ versions.py36 }}.tar.xz"
-  md5: "986078f11b39074be22a199e56491d98"
+  md5: "{{ hashes.py36 }}"
   tar_file: "/tmp/py{{ versions.py36 }}.tar.xz"
   sources: "/tmp/Python-{{ versions.py36 }}"
   install: "{{ base_install_folder }}/python{{ versions.py36 }}"
@@ -136,7 +149,7 @@ py37:
   version: "{{  versions.py37 }}"
   major_version: "3.7"
   url: "https://www.python.org/ftp/python/{{ versions.py37 }}/Python-{{ versions.py37 }}.tar.xz"
-  md5: "c08fbee72ad5c2c95b0f4e44bf6fd72c"
+  md5: "{{ hashes.py37 }}"
   tar_file: "/tmp/py{{ versions.py37 }}.tar.xz"
   sources: "/tmp/Python-{{ versions.py37 }}"
   install: "{{ base_install_folder }}/python{{ versions.py37 }}"
@@ -146,7 +159,7 @@ py38:
   version: "{{  versions.py38 }}"
   major_version: "3.8"
   url: "https://www.python.org/ftp/python/{{ versions.py38 }}/Python-{{ versions.py38 }}.tar.xz"
-  md5: "b3fb85fd479c0bf950c626ef80cacb57"
+  md5: "{{ hashes.py38 }}"
   tar_file: "/tmp/py{{ versions.py38 }}.tar.xz"
   sources: "/tmp/Python-{{ versions.py38 }}"
   install: "{{ base_install_folder }}/python{{ versions.py38 }}"
