--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -15,6 +15,7 @@ python_35: false
 python_36: true
 python_37: false
 python_38: false
+python_39: false
 
 pillow: false
 lxml: false
@@ -31,6 +32,7 @@ versions:
   py36: "3.6.12"
   py37: "3.7.9"
   py38: "3.8.7"
+  py39: "3.9.1"
 
 hashes:
   py24: "76083277f6c7e4d78992f36d7ad9018d"
@@ -44,6 +46,7 @@ hashes:
   py36: "9ca8ca6f206e9ac0f0726ecb4ebb6e2c"
   py37: "389d3ed26b4d97c741d9e5423da1f43b"
   py38: "60fe018fffc7f33818e6c340d29e2db9"
+  py39: "61981498e75ac8f00adcb908281fadb6"
 
 venv_versions:
   py24: "1.7.2"
@@ -164,6 +167,16 @@ py38:
   sources: "/tmp/Python-{{ versions.py38 }}"
   install: "{{ base_install_folder }}/python{{ versions.py38 }}"
   bin: "{{ base_install_folder }}/python{{ versions.py38 }}/bin/python3.8"
+
+py39:
+  version: "{{  versions.py39 }}"
+  major_version: "3.9"
+  url: "https://www.python.org/ftp/python/{{ versions.py39 }}/Python-{{ versions.py39 }}.tar.xz"
+  md5: "{{ hashes.py39 }}"
+  tar_file: "/tmp/py{{ versions.py39 }}.tar.xz"
+  sources: "/tmp/Python-{{ versions.py39 }}"
+  install: "{{ base_install_folder }}/python{{ versions.py39 }}"
+  bin: "{{ base_install_folder }}/python{{ versions.py39 }}/bin/python3.9"
 
 venv24:
   version: "{{ venv_versions.py24 }}"
