--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -15,6 +15,7 @@ python_35: false
 python_36: true
 python_37: false
 python_38: false
+python_39: false
 
 pillow: false
 lxml: false
@@ -27,10 +28,11 @@ versions:
   py32: "3.2.6"
   py33: "3.3.7"
   py34: "3.4.10"
-  py35: "3.5.9"
-  py36: "3.6.10"
-  py37: "3.7.6"
-  py38: "3.8.1"
+  py35: "3.5.10"
+  py36: "3.6.12"
+  py37: "3.7.9"
+  py38: "3.8.7"
+  py39: "3.9.1"
 
 hashes:
   py24: "76083277f6c7e4d78992f36d7ad9018d"
@@ -40,10 +42,11 @@ hashes:
   py32: "e0ba4360dfcb4aec735e666cc0ae7b0e"
   py33: "84e2f12f044ca53b577f6224c53f82ac"
   py34: "f88a98bce17a03c43a6a5f8a66ab2e62"
-  py35: "ef7f82485e83c7f8f8bcb920a9c2457b"
-  py36: "986078f11b39074be22a199e56491d98"
-  py37: "c08fbee72ad5c2c95b0f4e44bf6fd72c"
-  py38: "b3fb85fd479c0bf950c626ef80cacb57"
+  py35: "75c9c268703654aa6f6f2ae67303dde4"
+  py36: "9ca8ca6f206e9ac0f0726ecb4ebb6e2c"
+  py37: "389d3ed26b4d97c741d9e5423da1f43b"
+  py38: "60fe018fffc7f33818e6c340d29e2db9"
+  py39: "61981498e75ac8f00adcb908281fadb6"
 
 venv_versions:
   py24: "1.7.2"
@@ -163,7 +166,17 @@ py38:
   tar_file: "/tmp/py{{ versions.py38 }}.tar.xz"
   sources: "/tmp/Python-{{ versions.py38 }}"
   install: "{{ base_install_folder }}/python{{ versions.py38 }}"
-  bin: "{{ base_install_folder }}/python{{ versions.py38 }}/bin/python3.8"
+
+py39:
+  version: "{{  versions.py39 }}"
+  major_version: "3.9"
+  url: "https://www.python.org/ftp/python/{{ versions.py39 }}/Python-{{ versions.py39 }}.tar.xz"
+  md5: "{{ hashes.py39 }}"
+  tar_file: "/tmp/py{{ versions.py39 }}.tar.xz"
+  sources: "/tmp/Python-{{ versions.py39 }}"
+  install: "{{ base_install_folder }}/python{{ versions.py39 }}"
+  bin: "{{ base_install_folder }}/python{{ versions.py39 }}/bin/python3.9"
+ bin: "{{ base_install_folder }}/python{{ versions.py39 }}/bin/python3.9"
 
 venv24:
   version: "{{ venv_versions.py24 }}"
