--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -13,6 +13,7 @@
 - include: python_generic.yml py_data={{ py37 }} should_install={{ python_37 }}
 - include: python_generic.yml py_data={{ py38 }} should_install={{ python_38 }}
 - include: python_generic.yml py_data={{ py39 }} should_install={{ python_39 }}
+- include: python_generic.yml py_data={{ py310 }} should_install={{ python_310 }}
 - include: venv.yml py_data={{ py24 }} venv_data={{ venv24 }} should_install={{ python_24 }}
 - include: venv.yml py_data={{ py26 }} venv_data={{ venv26 }} should_install={{ python_26 }}
 - include: venv.yml py_data={{ py27 }} venv_data={{ venv27 }} should_install={{ python_27 }}
