--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,22 +1,42 @@
 ---
 
-- include: deps.yml
-- include: python24.yml
-- include: python26.yml
-- include: python_generic.yml py_data={{ py27 }} should_install={{ python_27 }}
-- include: python_generic.yml py_data={{ py31 }} should_install={{ python_31 }}
-- include: python_generic.yml py_data={{ py32 }} should_install={{ python_32 }}
-- include: python_generic.yml py_data={{ py33 }} should_install={{ python_33 }}
-- include: python_generic.yml py_data={{ py34 }} should_install={{ python_34 }}
-- include: python_generic.yml py_data={{ py35 }} should_install={{ python_35 }}
-- include: python_generic.yml py_data={{ py36 }} should_install={{ python_36 }}
-- include: python_generic.yml py_data={{ py37 }} should_install={{ python_37 }}
-- include: python_generic.yml py_data={{ py38 }} should_install={{ python_38 }}
-- include: python_generic.yml py_data={{ py39 }} should_install={{ python_39 }}
-- include: python_generic.yml py_data={{ py310 }} should_install={{ python_310 }}
-- include: python_generic.yml py_data={{ py311 }} should_install={{ python_311 }}
-- include: python_generic.yml py_data={{ py312 }} should_install={{ python_312 }}
-- include: venv.yml py_data={{ py24 }} venv_data={{ venv24 }} should_install={{ python_24 }}
-- include: venv.yml py_data={{ py26 }} venv_data={{ venv26 }} should_install={{ python_26 }}
-- include: venv.yml py_data={{ py27 }} venv_data={{ venv27 }} should_install={{ python_27 }}
-- include: misc.yml
+- name: Install dependencies
+  ansible.builtin.import_tasks: deps.yml
+- name: Install Python 2.4
+  ansible.builtin.import_tasks: python24.yml
+- name: Install Python 2.6
+  ansible.builtin.import_tasks: python26.yml
+- name: Install Python 2.7
+  ansible.builtin.import_tasks: python_generic.yml py_data={{ py27 }} should_install={{ python_27 }}
+- name: Install Python 3.1
+  ansible.builtin.import_tasks: python_generic.yml py_data={{ py31 }} should_install={{ python_31 }}
+- name: Install Python 3.2
+  ansible.builtin.import_tasks: python_generic.yml py_data={{ py32 }} should_install={{ python_32 }}
+- name: Install Python 3.3
+  ansible.builtin.import_tasks: python_generic.yml py_data={{ py33 }} should_install={{ python_33 }}
+- name: Install Python 3.4
+  ansible.builtin.import_tasks: python_generic.yml py_data={{ py34 }} should_install={{ python_34 }}
+- name: Install Python 3.5
+  ansible.builtin.import_tasks: python_generic.yml py_data={{ py35 }} should_install={{ python_35 }}
+- name: Install Python 3.6
+  ansible.builtin.import_tasks: python_generic.yml py_data={{ py36 }} should_install={{ python_36 }}
+- name: Install Python 3.7
+  ansible.builtin.import_tasks: python_generic.yml py_data={{ py37 }} should_install={{ python_37 }}
+- name: Install Python 3.8
+  ansible.builtin.import_tasks: python_generic.yml py_data={{ py38 }} should_install={{ python_38 }}
+- name: Install Python 3.9
+  ansible.builtin.import_tasks: python_generic.yml py_data={{ py39 }} should_install={{ python_39 }}
+- name: Install Python 3.10
+  ansible.builtin.import_tasks: python_generic.yml py_data={{ py310 }} should_install={{ python_310 }}
+- name: Install Python 3.11
+  ansible.builtin.import_tasks: python_generic.yml py_data={{ py311 }} should_install={{ python_311 }}
+- name: Install Python 3.12
+  ansible.builtin.import_tasks: python_generic.yml py_data={{ py312 }} should_install={{ python_312 }}
+- name: Install Virtualenv for Python 2.4
+  ansible.builtin.import_tasks: venv.yml py_data={{ py24 }} venv_data={{ venv24 }} should_install={{ python_24 }}
+- name: Install Virtualenv for Python 2.6
+  ansible.builtin.import_tasks: venv.yml py_data={{ py26 }} venv_data={{ venv26 }} should_install={{ python_26 }}
+- name: Install Virtualenv for Python 2.7
+  ansible.builtin.import_tasks: venv.yml py_data={{ py27 }} venv_data={{ venv27 }} should_install={{ python_27 }}
+- name: Miscellaneous
+  ansible.builtin.import_tasks: misc.yml
