--- a/tasks/misc.yml
+++ b/tasks/misc.yml
@@ -1,9 +1,9 @@
 ---
 
-- name: "Create a symlink to easily create python 2.7 virtualenvs"
+- name: Create a symlink to easily create python 2.7 virtualenvs
   become: true
-  file:
-    src: "/srv/python2.7/bin/virtualenv"
-    dest: "/usr/local/bin/virtualenv"
+  ansible.builtin.file:
+    src: /srv/python2.7/bin/virtualenv
+    dest: /usr/local/bin/virtualenv
     state: link
   when: python_27
