--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,6 +2,8 @@
 galaxy_info:
   author: Gil Forcada Codinachs
   description: Install all dependencies and compile any version of Python
+  role_name: compile_python
+  namespace: gforcada
   license: BSD
   min_ansible_version: '2.2'
   platforms:
