--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,41 +2,127 @@
 
 - name: Install dependencies
   ansible.builtin.import_tasks: deps.yml
+
 - name: Install Python 2.4
   ansible.builtin.import_tasks: python24.yml
+
 - name: Install Python 2.6
   ansible.builtin.import_tasks: python26.yml
+
 - name: Install Python 2.7
-  ansible.builtin.import_tasks: python_generic.yml py_data={{ py27 }} should_install={{ python_27 }}
+  ansible.builtin.include_tasks:
+    file: python_generic.yml
+  vars:
+    py_data: "{{ py27 }}"
+  when: python_27
+
 - name: Install Python 3.1
-  ansible.builtin.import_tasks: python_generic.yml py_data={{ py31 }} should_install={{ python_31 }}
+  ansible.builtin.include_tasks:
+    file: python_generic.yml
+  vars:
+    py_data: "{{ py31 }}"
+  when: python_31
+
 - name: Install Python 3.2
-  ansible.builtin.import_tasks: python_generic.yml py_data={{ py32 }} should_install={{ python_32 }}
+  ansible.builtin.include_tasks:
+    file: python_generic.yml
+  vars:
+    py_data: "{{ py32 }}"
+  when: python_32
+
 - name: Install Python 3.3
-  ansible.builtin.import_tasks: python_generic.yml py_data={{ py33 }} should_install={{ python_33 }}
+  ansible.builtin.include_tasks:
+    file: python_generic.yml
+  vars:
+    py_data: "{{ py33 }}"
+  when: python_33
+
 - name: Install Python 3.4
-  ansible.builtin.import_tasks: python_generic.yml py_data={{ py34 }} should_install={{ python_34 }}
+  ansible.builtin.include_tasks:
+    file: python_generic.yml
+  vars:
+    py_data: "{{ py34 }}"
+  when: python_34
+
 - name: Install Python 3.5
-  ansible.builtin.import_tasks: python_generic.yml py_data={{ py35 }} should_install={{ python_35 }}
+  ansible.builtin.include_tasks:
+    file: python_generic.yml
+  vars:
+    py_data: "{{ py35 }}"
+  when: python_35
+
 - name: Install Python 3.6
-  ansible.builtin.import_tasks: python_generic.yml py_data={{ py36 }} should_install={{ python_36 }}
+  ansible.builtin.include_tasks:
+    file: python_generic.yml
+  vars:
+    py_data: "{{ py36 }}"
+  when: python_36
+
 - name: Install Python 3.7
-  ansible.builtin.import_tasks: python_generic.yml py_data={{ py37 }} should_install={{ python_37 }}
+  ansible.builtin.include_tasks:
+    file: python_generic.yml
+  vars:
+    py_data: "{{ py37 }}"
+  when: python_37
+
 - name: Install Python 3.8
-  ansible.builtin.import_tasks: python_generic.yml py_data={{ py38 }} should_install={{ python_38 }}
+  ansible.builtin.include_tasks:
+    file: python_generic.yml
+  vars:
+    py_data: "{{ py38 }}"
+  when: python_38
+
 - name: Install Python 3.9
-  ansible.builtin.import_tasks: python_generic.yml py_data={{ py39 }} should_install={{ python_39 }}
+  ansible.builtin.include_tasks:
+    file: python_generic.yml
+  vars:
+    py_data: "{{ py39 }}"
+  when: python_39
+
 - name: Install Python 3.10
-  ansible.builtin.import_tasks: python_generic.yml py_data={{ py310 }} should_install={{ python_310 }}
+  ansible.builtin.include_tasks:
+    file: python_generic.yml
+  vars:
+    py_data: "{{ py310 }}"
+  when: python_310
+
 - name: Install Python 3.11
-  ansible.builtin.import_tasks: python_generic.yml py_data={{ py311 }} should_install={{ python_311 }}
+  ansible.builtin.include_tasks:
+    file: python_generic.yml
+  vars:
+    py_data: "{{ py311 }}"
+  when: python_311
+
 - name: Install Python 3.12
-  ansible.builtin.import_tasks: python_generic.yml py_data={{ py312 }} should_install={{ python_312 }}
+  ansible.builtin.include_tasks:
+    file: python_generic.yml
+  vars:
+    py_data: py312
+  when: python_312
+
 - name: Install Virtualenv for Python 2.4
-  ansible.builtin.import_tasks: venv.yml py_data={{ py24 }} venv_data={{ venv24 }} should_install={{ python_24 }}
+  ansible.builtin.include_tasks:
+    file: venv.yml
+  vars:
+    py_data: py24
+    venv_data: venv24
+  when: python_24
+
 - name: Install Virtualenv for Python 2.6
-  ansible.builtin.import_tasks: venv.yml py_data={{ py26 }} venv_data={{ venv26 }} should_install={{ python_26 }}
+  ansible.builtin.include_tasks:
+    file: venv.yml
+  vars:
+    py_data: py26
+    venv_data: venv26
+  when: python_26
+
 - name: Install Virtualenv for Python 2.7
-  ansible.builtin.import_tasks: venv.yml py_data={{ py27 }} venv_data={{ venv27 }} should_install={{ python_27 }}
+  ansible.builtin.include_tasks:
+    file: venv.yml
+  vars:
+    py_data: py27
+    venv_data: venv27
+  when: python_27
+
 - name: Miscellaneous
   ansible.builtin.import_tasks: misc.yml
