--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,3 +26,22 @@ jobs:
       - name: Lint code.
         run: |
           yamllint */*.yml
+
+  playbook:
+    name: ansible-playbook lint
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the codebase.
+        uses: actions/checkout@v4
+
+      - name: Set up Python 3.
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
+
+      - name: Install test dependencies.
+        run: pip3 install ansible
+
+      - name: Lint code.
+        run: |
+          ansible-playbook --syntax-check ansible.yml
