--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -18,6 +18,7 @@ python_39: false
 python_310: false
 python_311: false
 python_312: true
+python_313: false
 
 pillow: false
 lxml: false
@@ -38,6 +39,7 @@ versions:
   py310: "3.10.14"
   py311: "3.11.9"
   py312: "3.12.3"
+  py313: "3.13.0b1"  # on a final release, the url path needs to be adjusted
 
 hashes:
   py24: "76083277f6c7e4d78992f36d7ad9018d"
@@ -55,6 +57,7 @@ hashes:
   py310: "05148354ce821ba7369e5b7958435400"
   py311: "22ea467e7d915477152e99d5da856ddc"
   py312: "8defb33f0c37aa4bdd3a38ba52abde4e"
+  py313: "e1208b22c67c77de72a5e20025b2fb53"
 
 venv_versions:
   py24: "1.7.2"
@@ -217,6 +220,16 @@ py312:
   sources: "/tmp/Python-{{ versions.py312 }}"
   install: "{{ base_install_folder }}/python{{ versions.py312 }}"
   bin: "{{ base_install_folder }}/python{{ versions.py312 }}/bin/python3.12"
+
+py313:
+  version: "{{ versions.py313 }}"
+  major_version: "3.13"
+  url: "{{ ftp_url }}/3.13.0/Python-{{ versions.py313 }}.tar.xz"
+  md5: "{{ hashes.py313 }}"
+  tar_file: "/tmp/py{{ versions.py313 }}.tar.xz"
+  sources: "/tmp/Python-{{ versions.3.13 }}"
+  install: "{{ base_install_folder }}/python{{ versions.3.13 }}"
+  bin: "{{ base_install_folder }}/python{{ versions.3.13 }}/bin/python3.13"
 
 venv24:
   version: "{{ venv_versions.py24 }}"
